# ROS2-theory-and-practice

./: README.md
bag/bag_cmd/: bag_cmd_0.db3  metadata.yaml
bag/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ws00_helloworld/install/: local_setup.sh  setup.bash  setup.sh
ws00_helloworld/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
ws00_helloworld/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
ws00_helloworld/src/turtlesim/src/: turtle_frame.cpp
ws01_plumbing/install/: local_setup.sh  setup.sh
ws01_plumbing/install/base_interfaces_demo/share/base_interfaces_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws01_plumbing/install/cpp01_topic/lib/cpp01_topic/: demo01_talker_str  demo02_listener_str  demo03_talker_stu  demo04_listener_stu
ws01_plumbing/install/cpp01_topic/share/cpp01_topic/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws01_plumbing/install/cpp02_service/lib/cpp02_service/: demo01_server  demo02_client
ws01_plumbing/install/cpp02_service/share/cpp02_service/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws01_plumbing/install/cpp03_action/lib/cpp03_action/: demo01_action_server  demo02_action_client
ws01_plumbing/install/cpp03_action/share/cpp03_action/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws01_plumbing/install/cpp04_param/lib/cpp04_param/: demo00_param  demo01_param_server  demo02_param_client
ws01_plumbing/install/cpp04_param/share/cpp04_param/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws01_plumbing/install/cpp05_names/lib/cpp05_names/: demo01_names
ws01_plumbing/install/cpp05_names/share/cpp05_names/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws01_plumbing/install/cpp06_time/lib/cpp06_time/: demo01_time
ws01_plumbing/install/cpp06_time/share/cpp06_time/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws01_plumbing/install/cpp07_exercise/lib/cpp07_exercise/: exer01_pub_sub  exer02_server  exer03_client
ws01_plumbing/install/cpp07_exercise/share/cpp07_exercise/: package.bash  package.dsv  package.ps1  (+3 more)
ws01_plumbing/log/: latest_build
ws01_plumbing/src/base_interfaces_demo/: CMakeLists.txt  package.xml
ws01_plumbing/src/base_interfaces_demo/action/: Nav.action
ws01_plumbing/src/base_interfaces_demo/msg/: Student.msg
ws01_plumbing/src/cpp01_topic/: CMakeLists.txt
ws01_plumbing/src/cpp01_topic/src/: demo01_talker_str.cpp  demo02_listener_str.cpp  demo03_talker_stu.cpp  demo04_listener_stu.cpp
ws01_plumbing/src/cpp02_service/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp02_service/src/: demo01_server.cpp  demo02_client.cpp
ws01_plumbing/src/cpp03_action/: CMakeLists.txt
ws01_plumbing/src/cpp03_action/src/: demo01_action_server.cpp  demo02_action_client.cpp
ws01_plumbing/src/cpp04_param/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp04_param/src/: demo00_param.cpp  demo01_param_server.cpp  demo02_param_client.cpp
ws01_plumbing/src/cpp05_names/: CMakeLists.txt
ws01_plumbing/src/cpp05_names/launch/: demo01_names_launch.py  demo03_names_launch.yaml
ws01_plumbing/src/cpp05_names/src/: demo01_names.cpp
ws01_plumbing/src/cpp06_time/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp06_time/src/: demo01_time.cpp
ws01_plumbing/src/cpp07_exercise/: CMakeLists.txt
ws01_plumbing/src/cpp07_exercise/launch/: exer01_pub_sub_launch.py  exer04_server_launch.py  exer05_client_launch.py
ws01_plumbing/src/cpp07_exercise/src/: exer01_pub_sub.cpp  exer02_server.cpp  exer03_client.cpp  exer04_action_server.cpp  exer05_action_client.cpp
ws01_plumbing/src/py01_topic/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py02_service/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py02_service/py02_service/: demo01_server_py.py
ws01_plumbing/src/py03_action/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py03_action/py03_action/: demo01_action_server_py.py
ws01_plumbing/src/py04_param/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py04_param/py04_param/: demo00_param_py.py
ws01_plumbing/src/py05_names/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py05_names/py05_names/: demo01_names_py.py
ws01_plumbing/src/py06_time/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py06_time/py06_time/: demo01_time_py.py
ws01_plumbing/src/turtlesim/src/: turtle.cpp  turtle_frame.cpp
ws01_plumbing/src/tutorails_plumbing/: CMakeLists.txt  package.xml
ws02_tools/: frames.gv
ws02_tools/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws02_tools/src/cpp01_launch/: CMakeLists.txt
ws02_tools/src/cpp01_launch/config/: xixi.yaml
ws02_tools/src/cpp02_rosbag/: CMakeLists.txt  package.xml
ws02_tools/src/cpp02_rosbag/src/: demo01_writer.cpp  demo02_reader.cpp
ws02_tools/src/cpp03_tf_broadcaster/: CMakeLists.txt  package.xml
ws02_tools/src/cpp03_tf_broadcaster/src/: demo01_static_tf_broadcaster.cpp  demo02_dynamic_tf_broadcaster.cpp  demo03_point_tf_broadcaster.cpp
ws02_tools/src/cpp04_tf_listener/: CMakeLists.txt  package.xml
ws02_tools/src/cpp04_tf_listener/src/: demo01_tf_listener.cpp  demo02_msg_filter.cpp
ws02_tools/src/cpp05_exercise/: CMakeLists.txt
ws02_tools/src/cpp05_exercise/launch/: escort.launch.py  follow.launch.py
ws02_tools/src/cpp05_exercise/src/: exer01_spawn.cpp  exer02_tf_broadcaster.cpp  exer03_tf_listener.cpp
ws02_tools/src/py01_launch/: package.xml  setup.cfg  setup.py
ws02_tools/src/py02_rosbag/: package.xml  setup.cfg  setup.py
ws02_tools/src/py02_rosbag/py02_rosbag/: demo01_writer_py.py
ws02_tools/src/py03_tf_broadcaster/: package.xml  setup.cfg  setup.py
ws02_tools/src/py03_tf_broadcaster/py03_tf_broadcaster/: demo01_tf_static_broadcaster.py
ws02_tools/src/py04_tf_listener/: package.xml  setup.cfg  setup.py
ws02_tools/src/py04_tf_listener/py04_tf_listener/: demo01_tf_listener_py.py
(+145 files in other folders)
